# dt-dataflow-opencv

./: CMakeLists.txt  vcpkg.json
src/: bounded_buffer.hpp  plugin.cpp
src/nodes/: color_cvt.cpp  color_cvt.hpp  mat_copy.cpp  mat_copy.hpp  mat_display.cpp  mat_display.hpp  mat_output.cpp  mat_output.hpp  video_capture.cpp  video_capture.hpp  video_writer.cpp  video_writer.hpp
src/slots/: mat.cpp  mat.hpp
